# aether-3d

./: .gitignore  BASELINE_COMPARISON.md  CLAIM_LEDGER.md  DEVELOPMENT.md  PHASE3_PROGRESS.md  README.md  REFERENCES_AND_DATASETS.md  docs_brca_imc_real_data.md  docs_reference_visual_logic.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark.yml  bug.yml  config.yml  docs.yml  feature.yml
.github/workflows/: ci.yml
data/cards/: allen_merfish_whole_mouse_brain_serial.yaml  brca_imc_kuett_2022.yaml  gse223561_liver_regeneration_serial.yaml  merfish_hypothalamus_moffitt_2018.yaml  merfish_mouse_brain_receptor_map.yaml  mosta_mouse_embryo_serial.yaml  starmap_plus_mouse_cns_3d.yaml  stereoseq_whole_mouse_brain_serial.yaml  visium_breast_cancer_serial.yaml  visium_hd_mouse_brain.yaml  visium_hd_tonsil.yaml  visium_mouse_brain_serial_sections.yaml
docs/: DATASETS.md
docs/benchmark/: BENCHMARK_REPORT.md  summary.csv
docs/biology/: BIOLOGY_REPORT.md  biology_run.json
docs/biology/real/merfish_hypothalamus/figures/: pointcloud_3d_class.html  pointcloud_3d_gene_Gad1.html  pointcloud_3d_gene_Irs4.html  pointcloud_3d_gene_Mlc1.html  pointcloud_3d_gene_Myh11.html  pointcloud_3d_gene_Pak3.html  pointcloud_3d_gene_Selplg.html  pointcloud_3d_gene_Slco1a4.html  pointcloud_3d_gene_Syt2.html  tissue_mesh.html
docs/biology/synthetic/wide/figures/: pointcloud_3d_class.html  pointcloud_3d_gene_11.html  pointcloud_3d_gene_2.html  pointcloud_3d_gene_27.html  pointcloud_3d_gene_4.html  tissue_mesh.html
manuscript/: .gitignore  Makefile  README.md  compose_figures.py  compose_neighborhood_heatmap.py  compose_palette.py  main.tex  refs.bib
manuscript/figures/: fig_neighborhood_heatmap_skeleton.json
results/: holdout_validation_metrics.json
scripts/: README.md  check_independence.sh  run.sh
scripts/baselines/: README.md  naive_25d_baseline.py
scripts/benchmark/: README.md  make_plots.py  run_synthetic_sweep.py
scripts/ci/: README.md  run_scaling_sweep.py  run_synthetic_holdout.py  run_uot_ablation.py
scripts/data/: convert_to_serial_slices.py  fetch_aether_datasets.py  prepare_brca_imc_kuett_2022.py
scripts/data_flow/: generate_serial_slices.py
scripts/e2e/: export_roundtrip_real.py  plot_multi_slice_dashboard.py  validate_holdout_slice.py  verify_aether_pipeline.py
scripts/falsify/: README.md  run_field_controls.py
scripts/visualize/: README.md  _plot_utils.py  biology_figures.py  fig_celltype_dotplot.py  fig_composed_main_claim.py  fig_contrast_comparison.py  fig_density_similarity.py  fig_marker_heatmap.py  fig_morans_i_scatter.py  fig_multi_z_slice_grid.py  fig_multiplanar_slicing.py  fig_neighborhood_matrix.py  fig_openst_loo_fair_z.py  fig_per_region_spearman.py  fig_per_section_proportion.py  fig_recon_vs_25d.py  fig_reference_visual_story.py  fig_umap_comparison.py  fig_z_density_anchored.py
src/aether_3d/: __init__.py  cli.py  volume_io.py
src/aether_3d/benchmarks/: __init__.py  contract.py  graph_3d.py  metrics.py  neighborhood.py  region_common.py  runner.py  scaling.py  spatial_coherence.py  synthetic_field.py  topology.py  uot_ablation.py
src/aether_3d/benchmarks/adapters/: __init__.py  aether.py  asign.py  interpolai.py  linear.py  nearest.py  spatialz.py  stacking_25d.py  three_d_ot.py
src/aether_3d/config/: __init__.py  aether_config.py
src/aether_3d/core/: aether_reconstructor.py
src/aether_3d/coupling/: uot.py
src/aether_3d/data/: normalization.py  physical_z.py  raw_counts.py  serial_slice_converter.py  trajectory_dataset.py
src/aether_3d/flow/: __init__.py  integrators.py  path.py  transport.py  utils.py
src/aether_3d/models/: aether_velocity_field.py  embeddings.py
src/aether_3d/modules/: aether_flow_module.py
src/aether_3d/visualization/: plot_3d.py
tests/: conftest.py  test_baselines.py  test_cfg.py  test_ci_contract.py  test_cli.py  test_contract_schema.py  test_contrast_comparison_figure.py  test_dataset.py  test_flow_and_aether.py  test_flow_training_conditioning.py  test_imports.py  test_issue_regressions.py  test_metrics.py  test_openst_serial_loader.py  test_path.py  test_path_boundary.py  test_physical_z.py  test_plotting.py  test_public_api.py  test_quick_start.py  test_raw_count_verify.py  test_reconstruct.py  test_reconstruct_validation.py  test_repro.py  test_scaling.py  test_stacking_25d_baseline.py  test_training_losses.py  test_uot.py  test_uot_coupling.py  test_velocity_field.py  test_verify_aether_pipeline.py  test_volume_io.py  test_volume_io_real.py
tests/benchmarks/: test_aether_adapter.py  test_cell_type_and_virtual_slice.py  test_competitor_adapters.py  test_compose_neighborhood_heatmap.py  test_geometry_quartet.py  test_graph_3d.py  test_neighborhood_and_planes.py  test_region_common.py  test_scaling.py  test_stack25d_adapter.py  test_synthetic_field.py  test_topology.py  test_uot_ablation.py  test_uot_ablation_real_data.py  test_volume_contract.py
tests/data/: test_convert_to_serial_slices.py  test_fetch_aether_datasets.py  test_prepare_brca_imc.py
tests/smoke/: test_st_omics_sanity.py
