[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aether-3d"
dynamic = ["version"]
description = "Learning Continuous 3D Tissue Vector Fields from Serial Spatial Omics Slices"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Zeyu Fu Lab", email = "zeyufu@ustc.edu.cn" }
]
keywords = [
  "spatial-omics",
  "3d-reconstruction",
  "flow-matching",
  "optimal-transport",
  "single-cell",
  "generative-ai",
  "bioinformatics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "torch>=2.4",
  # >=2.2 guarantees the generic-ndarray (npt.NDArray) stubs CI's mypy relies on.
  "numpy>=2.2",
  "pandas>=2.2",
  "anndata>=0.10",
  "scanpy>=1.10",
  "pydantic>=2.8",
  "tqdm",
  "einops",
  "torchdiffeq",
  "timm",
  "pot",  # optional later
  "pytorch-lightning>=2.0",
]

[project.optional-dependencies]
# CI runs mypy 2.x; pin the major so local strict checks match CI exactly.
dev = ["pytest", "ruff", "mypy>=2,<3", "wandb"]
viz = ["plotly", "pyvista", "ipywidgets", "napari[all]"]

[project.scripts]
aether-reconstruct = "aether_3d.cli:reconstruct"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_3d"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# E702 (compact `a; b` statements) and E402 (imports after a sys.path bootstrap)
# are intentional, recurring patterns in the research scripts; everything else
# in ruff's default E/F set is enforced as a hard CI gate.
ignore = ["E702", "E402"]

[tool.mypy]
strict = true

# Third-party scientific libraries that ship no type stubs / py.typed marker.
# Listed explicitly (no blanket global ignore) so new untyped imports still surface.
# See issue #62 for the incremental strict-mypy paydown plan.
[[tool.mypy.overrides]]
module = [
  "anndata",
  "scanpy",
  "ot",
  "torchdiffeq",
  "pandas",
  "pandas.*",
  "scipy.*",
  "sklearn.*",
  "plotly",
  "plotly.*",
  "pyvista",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
